// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";
import "pusGroundModel/PusElement.proto";
import "pusGroundModel/Pus012ParameterMonitoringDefinition.proto";

package pusGroundModel.protobuf;

message Pus012Model {
extensions 7 to 107;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  repeated pusGroundModel.protobuf.Pus012ParameterMonitoringDefinition pus012ParameterMonitoringDefinition = 2;
  optional ccsds_mal.protobuf.UINTEGER noOfParameterMonitoringDefinition = 3;
  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 4;
  optional ccsds_mal.protobuf.TIME groundDate = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
}
